--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -1,3 +1,82 @@
 .contact{
-    background-color: lightgreen;
+    background-color: white;
+    display: flex;
+}
+
+.contact .left{
+    flex: 1;
+    overflow: hidden;
+}
+
+.contact .left img{
+    height: 100%;
+}
+
+.contact .right{
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.contact .right h2{
+    font-size: 30px;
+}
+
+.contact form{
+    width: 70%;
+    height: 70%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.contact form input{
+    width: 300px;
+    height: 30px;
+    font-size: 14px;
+}
+
+.contact form textarea{
+    width: 300px;
+    height: 200px;
+    font-size: 14px;
+}
+
+.contact form button{
+    width: 150px;
+    height: 30px;
+    color: white;
+    background-color: crimson;
+    border: none;
+    border-radius: 10px;
+    font-weight: 500;
+    cursor: pointer;
+}
+
+.contact form button:focus{
+    outline: none;
+}
+
+.contact form span{
+    color: green;
+    font-size: 14px;
+}
+
+@media screen and (max-width: 768px) {
+    .contact{
+        flex-direction: column;
+    }
+
+    .contact form input{
+        width: 200px;
+        height: 20px;
+    }
+    .contact form textarea{
+        width: 200px;
+        height: 100px;
+    }
+
 }
