--- a/src/components/feedbacks/feedbacks.css
+++ b/src/components/feedbacks/feedbacks.css
@@ -1,3 +1,128 @@
 .feedback{
-    background-color: lightcoral;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.feedback h1{
+    font-size: 50px;
+}
+
+.feedback .container{
+    width: 100%;
+    height: 80%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.feedback .card{
+    width: 250px;
+    height: 70%; 
+    border-radius: 10px;
+    box-shadow: 0px 0px 15px -8px black;
+    display: flex;  
+    flex-direction: column;
+    justify-content: space-around;
+    padding: 20px;
+    transition: all 0.7s ease;
+    /* margin: 0 30px; */
+}
+
+.feedback .card:hover{
+    transform: scale(1.1);
+}
+
+.feedback .featured{
+    width: 300px;
+    height: 75%;
+    margin: 0 30px;
+}
+
+.feedback .top{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.feedback .top .left, .top .right{
+    height: 25px;
+}
+
+.feedback .top .user{
+    height: 60px;
+    width: 60px;
+    border-radius: 50%;
+    object-fit: cover;
+    margin: 0 30px;
+}
+
+.feedback .card .center{
+    padding: 10px;
+    border-radius: 10px;
+    background-color: rgb(235, 225, 227);
+
+}
+
+.feedback .card .bottom{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.feedback .card .bottom h3{
+    margin-bottom: 5px;
+}
+.feedback .card .bottom h5{
+    color: grey;
+
+}
+
+@media screen and (max-width: 768px) {
+    /* for feedback section */
+    .feedback .top .left, .top .right{
+        height: 20px;
+    }
+    .feedback{
+        justify-content: space-around;
+    }
+
+    .feedback h1{
+        font-size: 50px;
+    }
+
+    .feedback .container{
+        flex-direction: column;
+        height: 100%;
+    }
+
+    .feedback .card{
+        height: 180px;
+        margin: 10px 0;
+    }
+
+    .feedback .featured{
+        width: 250px;
+        height: 180px;
+        margin: 1px;
+    }
+
+    .feedback .top .user{
+        width: 30px;
+        height: 30px;
+    }
+
+    .feedback .card .center{
+        font-size: 12px;
+        padding: 5px;
+    }
+
+    .feedback .card .bottom h3{
+        font-size: 14px;
+    }
+    .feedback .card .bottom h5{
+        font-size: 13px;
+    }
 }
