--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -25,7 +25,7 @@
 
 
 
-.container{
+.portfolio .container{
    width: 70%; 
    display: flex;
    align-items: center;
@@ -33,7 +33,7 @@
    flex-wrap: wrap;
 }
 
-.container .item{
+.portfolio .container .item{
     width: 220px;
     height: 150px;
     border-radius: 20px;
@@ -48,24 +48,43 @@
     cursor: pointer;
 }
 
-.item h3{
+.portfolio .container .item h3{
     position: absolute;
     font-size: 20px;
     padding: 0 11px
 }
 
-.item img{
+.portfolio .container .item img{
     width: 100%;
     height: 100%;
     object-fit: cover;
     z-index: 1;
 }
 
-.item:hover{
+.portfolio .container .item:hover{
     background-color: var(--mainColor);
 }
 
-.item img:hover{
+.portfolio .container .item img:hover{
     opacity: 0.2;
     z-index: 0;
+}
+
+@media screen and (max-width: 768px) {
+    .portfolio h1{
+        font-size: 20px;
+    }
+    .portfolio ul{
+        margin: 10px 0;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    .portfolio .container{
+        width: 100%;
+    }
+
+    .portfolio .container .item{
+        width: 130px;
+        height: 100px;
+    }
 }
