--- a/src/components/portfolioList/portfolioList.css
+++ b/src/components/portfolioList/portfolioList.css
@@ -12,3 +12,10 @@
     background-color: var(--mainColor);
     color: white;
 }
+
+@media screen and (max-width: 768px) {
+    .portfolioList{
+        margin-right: 20px;
+        margin-left: 4px;
+    }
+}
