--- a/src/app.css
+++ b/src/app.css
@@ -5,7 +5,7 @@
 .sections{
   width: 100%;  
   height: calc(100vh - 70px);
-  background-color: brown;
+  /* background-color: brown; */
   position: relative;
   top: 70px;
   scroll-behavior: smooth;
@@ -20,6 +20,6 @@
 .sections > *{
     width: 100vw;
     height: calc(100vh - 70px);
-    top: 70px;
+    /* top: 70px; */
     scroll-snap-align: start;
 }
