--- a/src/app.css
+++ b/src/app.css
@@ -4,10 +4,10 @@
 
 .sections{
   width: 100%;  
-  height: calc(100vh - 70px);
+  height: calc(100vh - 100px);
   /* background-color: brown; */
   position: relative;
-  top: 70px;
+  top: 100px;
   scroll-behavior: smooth;
   scroll-snap-type: y mandatory;
 }
@@ -22,4 +22,23 @@
     height: calc(100vh - 70px);
     /* top: 70px; */
     scroll-snap-align: start;
+}
+
+@media screen and (max-width: 1350px) {
+  
+  .sections{
+    scroll-snap-type: none;
+  }
+  .sections > *{
+    height: auto;
+  }
+  .sections #intro{
+      height: calc(100vh - 70px);
+      margin-bottom: 3vh;
+  }
+
+  .sections .works{
+    min-height: 60vh;
+
+  }
 }
