--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -4,7 +4,6 @@
     background-color: white;
     display: flex;
     gap: 144px;
-    /* flex-wrap: wrap; */
 }
 
 .intro .left{
@@ -12,7 +11,9 @@
     overflow: hidden;
     position: relative;
     /* background-color: red; */
-    
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .intro .right{
@@ -24,18 +25,21 @@
 
 .intro .imageContainer{
     overflow: hidden;
-    width: 700px;
-    height: 700px ;
-    background-color: crimson;
-    border-radius: 50%;
+    width: 100%;
+    height: 600px;
+    /* border-radius: 50%; */
+    
     display: flex;
-    align-items: center;
-    justify-content: flex-end; 
-    float: right;
+    align-items: flex-end;
+    justify-content: center;
 }
 
 .intro .imageContainer img{
     height: 90%; 
+    background-color: #ffa8b9bd;
+    box-shadow: 0px 0px 14px 0px crimson;
+    border-top-left-radius: 50%;
+    border-top-right-radius: 50%;
 }
 
 
@@ -92,6 +96,30 @@
     animation: blink 1s infinite;
 }
 
+.intro .buttons{
+    margin-top: 50px;
+    display: flex;
+    justify-content: flex-start;
+}
+
+.intro .buttons button{
+    font-size: 1rem;
+    padding: 15px 30px;
+    border-radius: 4px;
+    border: 2px solid crimson;
+    background-color: transparent;
+    margin-left: 15px;
+    color: crimson;
+    font-weight: 500;
+    transform: all .5s;
+}
+
+.intro .buttons button:hover{
+    background-color: crimson;
+    color: #fff;
+    cursor: pointer;
+
+}
 @keyframes blink{
     50%{
         opacity: 1;
@@ -100,21 +128,49 @@
         opacity: 0;
     }
 }
+
+@media screen and (max-width: 1396px) {
+    .intro{
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 0;
+    }
+
     
-    @media screen and (max-width: 768px) {
+    .intro .left{
+        align-items:unset;
+    }
+
+    .intro .left { 
+        width: 50vh;
+    }
+
+    .intro .imageContainer {
+        overflow: hidden;
+        width: 100%;
+        height: 100%;
+    }
+
+    .intro .imageContainer{
+        align-items: center;
+        justify-content: center;
+    }
+    .intro .imageContainer img{
+        height: 95%;
+        width: 80%;
+    }
+
+    .intro .wrapper h2 {
+        font-size: 24px;
+    }
+/* }
+@media screen and (max-width: 768px) { */
         /* for Intro section */
         .intro {
             flex-direction: column;
             align-items: center;
             gap: 0;
-        }
-    
-        .intro .imageContainer{
-            align-items: flex-start;
-            justify-content: center;
-        }
-        .intro .imageContainer img{
-            height: 50%;
         }
 
         .intro .wrapper{
