--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -5,11 +5,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    
+    gap: 3vh;
 }
 
-.portfolio h1{
+.portfolio .main_text{
     font-size: 50px;
+    text-transform: uppercase;
 }
 
 .portfolio ul{
@@ -23,8 +24,6 @@
 
 }
 
-
-
 .portfolio .container{
    width: 70%; 
    display: flex;
@@ -37,7 +36,8 @@
     width: 220px;
     height: 150px;
     border-radius: 20px;
-    border: 1px solid rgb(240, 239, 239);
+    border: 1px solid rgb(74, 74, 74);
+    box-shadow: 0px 0px 12px 0px #a9a9a9;
     margin:  10px 20px;
     display: flex;
     align-items: center;
@@ -51,7 +51,13 @@
 .portfolio .container .item h3{
     position: absolute;
     font-size: 20px;
-    padding: 0 11px
+    padding: 0 11px;
+}
+
+.portfolio .container span{
+    font-size: 20px;
+    padding: 34px 11px;
+    color: grey;
 }
 
 .portfolio .container .item img{
@@ -63,6 +69,7 @@
 
 .portfolio .container .item:hover{
     background-color: var(--mainColor);
+    box-shadow: 0px 0px 12px 0px #15023a;
 }
 
 .portfolio .container .item img:hover{
@@ -71,8 +78,12 @@
 }
 
 @media screen and (max-width: 768px) {
-    .portfolio h1{
-        font-size: 20px;
+
+    .portfolio{
+        margin-bottom: 5vh;
+    }
+    .portfolio .main_text{
+        font-size: 32px;
     }
     .portfolio ul{
         margin: 10px 0;
@@ -80,11 +91,8 @@
         justify-content: center;
     }
     .portfolio .container{
-        width: 100%;
+        width: 100%; 
     }
 
-    .portfolio .container .item{
-        width: 130px;
-        height: 100px;
-    }
+ 
 }
