--- a/src/components/topbar/topbar.css
+++ b/src/components/topbar/topbar.css
@@ -3,7 +3,7 @@
     background-color: white;
     color: var(--mainColor);
     width: 100%;
-    height: 70px;
+    height: 100px;
     position: fixed;
     top: 0;
     z-index: 3;
@@ -11,10 +11,11 @@
 }
 
 .topbar .wrapper{
-    padding: 10px 30px;
+    padding: 0 30px;
     display: flex;
-    align-items: center; 
+    align-items: center;
     justify-content: space-between;
+    height: 100%;
 }
 
 .topbar .left{
