--- a/src/components/works/works.css
+++ b/src/components/works/works.css
@@ -1,3 +1,4 @@
+ 
 .works{
     background-color: crimson;
     display: flex;
@@ -59,7 +60,8 @@
     height: 80%;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
+    gap: 50px;
     padding-left: 37px;
 }
 
@@ -72,7 +74,7 @@
      justify-content: center;
      align-items: center;
 }
-
+ 
 .works .leftContainer .imageContainer img{
     width: 25px;
     height: 29px;
@@ -83,7 +85,10 @@
 }
 
 .works p{
+    margin-top: 5px;
     font-size: 13px;
+    color: grey;
+    text-align: justify;
 }
 
 .works span{
@@ -110,18 +115,43 @@
 @media screen and (max-width: 768px) {
     /* for Intro section */
     .works .arrow {
-        display: none;
+        /* display: none; */
     }
 
-    .works .slider{
-        height: 100vh;
-        flex-direction: column;
+    .works .slider{ 
         justify-content: center;
     }
 
     .works .slider .container .item{
-        width: 90%;
-        height: 180px;
-        margin: 20px 0;
+        width: 80%; 
+        height: 60%;
+    }
+
+    .works .slider .container .item .right{
+        position: absolute;
+        width: 80vw;
+        height: inherit;
+        z-index: 2;
+        filter: blur(2px);
+        opacity: 0.8;
+    }
+    .works .slider .container .item .left{
+        z-index: 3;
+    }
+    
+    .works .item div p{
+        color: black;
+    }
+
+    .works .slider .leftContainer{
+        padding-right: 37px;
+        height: auto;
+    }
+ 
+    .works .leftarrow {
+        left: 10%;
+    }
+    .works .rightarrow {
+        right: 10%;
     }
 }
